apps/qbittorrent/templates/qbittorrent_network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: qbittorrent-restrict-egress
  namespace: argocd
spec:
  podSelector:
    matchLabels:
      app: qbittorrent
  policyTypes:
    - Egress
  egress:
    # Allow all egress traffic, but only to port 1080 for all protocols
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 1080
    # Allow DNS traffic to any external DNS server (UDP/TCP port 53)
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    # Allow all egress traffic to local IP ranges (10.0.0.0/8, 172.16.0.0/12, 192.168.0.0/16)
    - to:
        - ipBlock:
            cidr: 10.0.0.0/8
        - ipBlock:
            cidr: 172.16.0.0/12
        - ipBlock:
            cidr: 192.168.0.0/16
    # Allow all egress traffic to port 465 for email notifications
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 465
